# erlang-and-elm

./: README.md
clock/: .gitignore  Makefile.am  README.md  clock.rel.in  configure.ac
clock/ebin/: clock.app.in
clock/priv/src/: Clock.elm
clock/src/: clock_app.erl  clock_sup.erl
clock_js/: .gitignore  Makefile.am  README.md  configure.ac
clock_js/ebin/: clock_js.app.in
clock_js/priv/src/: Clock.elm  Main.elm
clock_js/src/: clock_js_app.erl  clock_js_sup.erl
hello/: .gitignore  Makefile.am  README.md  configure.ac
hello/ebin/: hello.app.in
hello/priv/src/: Hello.elm
hello/src/: hello_app.erl  hello_sup.erl
patches/: cowboy-adaptation-for-autotools.patch  cowlib-adaptation-for-autotools.patch  ranch-adaptation-for-autotools.patch
